--- a/templates/r10k-hiera.configmap.yaml
+++ b/templates/r10k-hiera.configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.hiera.hieradataurl }}
+{{- if (include "hiera.enable" .) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -11,12 +11,17 @@ data:
     :cachedir: '/etc/puppetlabs/code/r10k_cache'
     # A list of git repositories to create
     :sources:
+      {{- if .Values.hiera.hieradataurl }}
       # This will clone the git repository and instantiate an environment per
       # branch in '/etc/puppetlabs/code/hiera-data'
       :hiera_repo:
         remote: '{{.Values.hiera.hieradataurl}}'
         basedir: '/etc/puppetlabs/code/hiera-data'
-    {{ .Values.r10k.hiera.extraSettings | nindent 4 }}
+      {{- end }}
+      {{- with .Values.r10k.hiera.extraRepository }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
+    {{ .Values.r10k.hiera.extraSettings | indent 4 }}
 
   r10k_hiera_cronjob.sh: |
     #!/usr/bin/env sh
@@ -33,10 +38,16 @@ data:
   r10k_hiera_entrypoint.sh: |
     #!/usr/bin/env sh
     set -e
+    {{- if .Values.r10k.hiera.cronJob.enabled }}
     cat > ~/.r10k_hiera_crontab <<'EOF'
     {{ .Values.r10k.hiera.cronJob.schedule }} /bin/sh -c /etc/puppetlabs/puppet/r10k_hiera_cronjob.sh
     EOF
     tail -Fq ~/.r10k_hiera_cronjob.out &
+    {{- end }}
     touch ~/.r10k_hiera_cronjob.success > /dev/null 2>&1
+    {{- if .Values.r10k.hiera.cronJob.enabled }}
     exec supercronic ~/.r10k_hiera_crontab
+    {{- else}}
+    tail -f /dev/null
+    {{- end }}
 {{- end }}
