--- a/templates/public_key.pkcs7.pem.yaml
+++ b/templates/public_key.pkcs7.pem.yaml
@@ -1,4 +1,4 @@
-{{- if and (.Values.hiera.eyaml.public_key) (not .Values.r10k.hiera.viaSsh.credentials.existingSecret) }}
+{{- if and (.Values.hiera.eyaml.private_key) (not .Values.r10k.hiera.viaSsh.credentials.existingSecret) (not .Values.hiera.eyaml.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,5 +6,7 @@ metadata:
   labels:
     {{- include "puppetserver.hiera.labels" . | nindent 4 }}
 data:
-  public_key.pkcs7.pem: {{ .Values.hiera.eyaml.public_key | nindent 4 | b64enc }}
+  public_key.pkcs7.pem: {{ required "A valid .Values.hiera.eyaml.public_key required!" .Values.hiera.eyaml.public_key | nindent 4 | b64enc }}
 {{- end }}
+
+
