--- a/templates/puppetserver-statefulset-compilers.yaml
+++ b/templates/puppetserver-statefulset-compilers.yaml
@@ -147,15 +147,19 @@ spec:
             # necessary to set certname and server in puppet.conf, required by
             # puppetserver ca cli application
             - name: PUPPETSERVER_HOSTNAME
+              {{- if .Values.puppetserver.overrideHostname }}
+              value: {{ .Values.puppetserver.overrideHostname | quote }}
+              {{- else }}
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+              {{- end }}
             - name: PUPPET_MASTERPORT
               value: "{{ template "puppetserver.puppetserver-compilers.port" . }}"
             - name: DNS_ALT_NAMES
               value: "{{ template "puppetserver.puppetserver-compilers.serviceName" . }},{{.Values.puppetserver.compilers.fqdns.alternateServerNames}}"
             - name: PUPPETDB_SERVER_URLS
-              value: "https://puppetdb:8081"
+              value: "https://{{ .Values.puppetdb.overrideHostname | default "puppetdb"  }}:8081"
             - name: CA_ENABLED
               value: "false"
             - name: CA_HOSTNAME
