--- a/values.yaml
+++ b/values.yaml
@@ -27,6 +27,10 @@ puppetserver:
     ##
     extraEnv: {}
 
+    ## Additional Masters' container labels
+    ##
+    extraLabels: {}
+
     updateStrategy:
       type: RollingUpdate
       rollingUpdate:
@@ -173,6 +177,10 @@ puppetserver:
     ## Additional Compilers' container environment variables
     ##
     extraEnv: {}
+
+    ## Additional Masters' container labels
+    ##
+    extraLabels: {}
 
     updateStrategy:
       type: RollingUpdate
@@ -414,6 +422,10 @@ puppetdb:
   extraContainers: []
   ## Additional puppetdb container environment variables
   extraEnv: {}
+  
+  ## Additional Masters' container labels
+  ##
+  extraLabels: {}
 
   updateStrategy:
     type: Recreate
