--- a/templates/puppetserver-statefulset-compilers.yaml
+++ b/templates/puppetserver-statefulset-compilers.yaml
@@ -5,6 +5,9 @@ metadata:
   name: {{ template "puppetserver.name" . }}-puppetserver-compiler
   labels:
     {{- include "puppetserver.puppetserver-compilers.labels" . | nindent 4 }}
+    {{- with .Values.puppetserver.compilers.extraLabels }}
+    {{ toYaml . | indent 6 }}
+    {{- end }}
   {{- if .Values.puppetserver.compilers.annotations }}
   annotations:
     {{- toYaml .Values.puppetserver.compilers.annotations | nindent 4 }}
