--- a/templates/puppetserver-serviceaccount.yaml
+++ b/templates/puppetserver-serviceaccount.yaml
@@ -4,8 +4,15 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.puppetserver.serviceAccount.accountName | default "puppet" }}
   namespace: {{ .Release.Namespace }}
+  {{- if or (.Values.puppetserver.preGeneratedCertsJob.enabled) (.Values.singleCA.enabled) (.Values.storage.annotations) }}
   annotations:
+  {{- end }}
+    {{- if or (.Values.puppetserver.preGeneratedCertsJob.enabled) (.Values.singleCA.enabled) }}
     helm.sh/hook: pre-install
     helm.sh/hook-delete-policy: before-hook-creation
     helm.sh/hook-weight: "-10"
+    {{- end }}
+    {{- if .Values.storage.annotations }}
+    {{ toYaml .Values.storage.annotations }}
+    {{- end }}
 {{- end }}
