--- a/templates/puppetdb-preInstall.configMap.yaml
+++ b/templates/puppetdb-preInstall.configMap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.puppetserver.preGeneratedCertsJob.enabled }}
+{{- if and (.Values.puppetserver.preGeneratedCertsJob.enabled) (not .Values.singleCA.enabled) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
