--- a/templates/puppetserver-podsecuritypolicy.yaml
+++ b/templates/puppetserver-podsecuritypolicy.yaml
@@ -4,10 +4,17 @@ kind: PodSecurityPolicy
 metadata:
   name: {{ default "puppetserver" .Values.puppetserver.serviceAccount.accountName }}-psp
   namespace: {{ .Release.Namespace }}
+  {{- if or (.Values.puppetserver.preGeneratedCertsJob.enabled) (.Values.singleCA.enabled) (.Values.storage.annotations) }}
   annotations:
+  {{- end }}
+    {{- if or (.Values.puppetserver.preGeneratedCertsJob.enabled) (.Values.singleCA.enabled) }}
     helm.sh/hook: pre-install
     helm.sh/hook-delete-policy: before-hook-creation
     helm.sh/hook-weight: "-10"
+    {{- end }}
+    {{- if .Values.storage.annotations }}
+    {{ toYaml .Values.storage.annotations }}
+    {{- end }}
 spec:
   privileged: true
   volumes:
